code/703_kubernetes/02_challenge/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenge-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: challenge-app
  template:
    metadata:
      labels:
        app: challenge-app
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: storage
          mountPath: /usr/share/nginx/html
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: challenge-pvc
