code/703_kubernetes/02_challenge/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: challenge-service
spec:
  type: NodePort
  selector:
    app: challenge-app
  ports:
    - port: 80
      targetPort: 80
